# mc_kuka_fri

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
aliases/: iiwa.in.yaml
cmake/: FindKUKA_FRI.cmake
src/: AppState.h  CMakeLists.txt  RobotClient.cpp  RobotClient.h  main.cpp
